--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "stripe": "^15.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
